--- a/src/components/mood-record-card/mood-record-card.template.hbs
+++ b/src/components/mood-record-card/mood-record-card.template.hbs
@@ -1,4 +1,4 @@
-<div class="min-h-28 w-full relative border-2 text-stone-900 bg-stone-300 border-stone-950 p-4 rounded-md mt-4 flex flex-col">
+<div class="record-card min-h-24 w-full relative border-2 text-stone-900 bg-stone-300 border-stone-950 p-4 rounded-md mb-4 flex flex-col">
   <div class="flex gap-7 items-center">
     <div class="border border-stone-950 rounded-full w-20 h-20">
       <img src="{{emoji}}" alt="emoji-img">
@@ -11,8 +11,8 @@
 
   <div class="absolute right-4 top-3 flex flex-col gap-3 justify-end">
     <p class="text-lg">{{createdAt}}</p>
-    <button class="text-3xl text-stone-900">
-      <i class="icon-badge-x "></i>
+    <button class="delete-btn text-3xl text-stone-900">
+      <i class="icon-badge-x"></i>
     </button>
   </div>
 </div>
