--- a/src/pages/home/home.template.hbs
+++ b/src/pages/home/home.template.hbs
@@ -1,8 +1,10 @@
 <div class="flex flex-col justify-between min-h-screen">
-  <header class="p-5 bg-purple-100 flex justify-end items-center h-24">
-    <nav class="flex gap-5 align-center">
+  <header class="p-5 bg-header flex justify-end items-center h-24">
+    <nav class="flex gap-8 align-center ">
       {{#each links}}
-        <router-link href="{{this.href}}" class="text-lime-900 text-xl px-4 py-2" label="{{this.label}}"></router-link>
+      <button class="text-lime-900 text-xl px-4 py-2 border border-lime-900 rounded-lg">
+        <router-link href="{{this.href}}" label="{{this.label}}"></router-link>
+      </button>
       {{/each}}
     </nav>
   </header>
