--- a/src/pages/sign-up/sign-up.template.hbs
+++ b/src/pages/sign-up/sign-up.template.hbs
@@ -1,25 +1,25 @@
-<div class="bg-indigo-900 min-h-screen relative">
+<div class="bg-slate-800 min-h-screen relative">
   <ui-loader loading="{{isLoading}}" class-name="z-1 bg-white/70"></ui-loader>
   <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto sm:h-screen lg:py-0">
     <div
       class="w-full bg-white rounded-lg shadow md:mt-0 sm:max-w-md xl:p-0">
       <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
-        <div class="flex items-center gap-2">
-        <i class="icon-arrow-big-left text-indigo-500"></i>
-        <router-link href="${props.routes.home}" label="Back to Home page" class="text-indigo-500"></router-link>
-        </div>
+        <div class="flex items-center gap-2 text-purple-500 text-lg">
+          <i class="icon-arrow-big-left"></i>
+          <router-link href="${props.routes.home}" label="Back to Home page"></router-link>
+          </div>
         <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
           Create an account
         </h1>
         <p class="text-md font-light text-gray-500 dark:text-gray-400">
-          Already have an account? <router-link href="${props.routes.signIn}" label="Login here" class="text-indigo-500"></router-link>
+          Already have an account? <router-link href="${props.routes.signIn}" label="Login here" class="text-purple-700"></router-link>
         </p>
         <form class="space-y-4 md:space-y-6  flex flex-col sign-in-form mt-12">
           <ui-input type="text" name="displayName" label="Your Name"></ui-input>
           <ui-input type="email" name="email" label="Email"></ui-input>
           <ui-input type="password" name="password" label="Password"></ui-input>
           <ui-input type="password" name="confirm-password" label="Confirm password"></ui-input>
-          <ui-button caption="Submit" class-name="block w-full"></ui-button>
+          <ui-button caption="Submit" class-name="block w-full hover:bg-stone-900 hover:text-slate-300"></ui-button>
         </form>
       </div>
     </div>
