--- a/src/pages/todo/todo.template.hbs
+++ b/src/pages/todo/todo.template.hbs
@@ -1,5 +1,5 @@
-<ui-loader loading="{{isLoading}}" ></ui-loader>
-<div class="min-h-screen grid grid-rows-layout bg-slate-800">
+<div class="min-h-screen grid grid-rows-layout bg-slate-800 relative">
+<ui-loader loading="{{isLoading}}" class="absolute bg-white"></ui-loader>
   <header class="flex justify-between items-center h-24 py-5 px-24 bg-purple-100">
     <button class="super-btn border border-lime-950 p-2 rounded-lg text-xl hover:border-slate-400">
       <i class="icon-arrow-big-left text-lime-950  w-5 h-5"></i>
@@ -14,7 +14,7 @@
 
   <div class="flex items-center justify-center">
     <div class="todo gap-4 mt-8 grid grid-cols-layout w-full md:px-4 lg:px-32 xl:px-60">
-      <div class="todo__col bg-slate-50 border border-lime-950 md:w-[300px] p-4 flex flex-col gap-4 rounded-lg h-[854px] overflow-y-auto">
+      <div class="todo__col bg-slate-50 border border-lime-950 md:w-[300px] p-4 flex flex-col gap-4 rounded-lg h-[830px] overflow-y-auto">
         <div class="todo__col-name text-2xl border-b-2 border-lime-950 p-4 flex items-center gap-4">
           <h3>Categories</h1>
           <i class="icon-badge-plus create-category cursor-pointer"></i>
@@ -35,7 +35,7 @@
         </div>
       </div>
 
-      <div class="todo__col bg-slate-50 border border-lime-950 p-4 w-full rounded-lg h-[854px] overflow-y-scroll scroll-smooth">
+      <div class="todo__col bg-slate-50 border border-lime-950 p-4 w-full rounded-lg h-[830px] overflow-y-scroll scroll-smooth">
         <div class="todo__col-name text-2xl border-b-2 border-lime-950 p-4 flex items-center gap-4">
           <h3>ToDo</h1>
           <i class="icon-badge-plus create-task cursor-pointer"></i>
