--- a/src/pages/user-home/user-home.template.hbs
+++ b/src/pages/user-home/user-home.template.hbs
@@ -13,37 +13,43 @@
     </header>
 
     <main class="mt-3">
-      <div class="routes flex flex-wrap p-5 pt-44 gap-24 justify-center">
-        <div class="routes__nav-card h-72 bg-violet-200 hover:bg-violet-300 rounded-lg flex">
-          <div class="routes__container border m-3 rounded-md flex items-center">
-            <div class="">
-              <router-link 
-              href="${props.routes.moodTracker}" 
-              label="Mood tracker" 
-              class="text-5xl text-lime-950 p-12">
-              </router-link>
+      <div class="routes flex flex-wrap p-5 pt-44 gap-24 justify-center font-light">
+        <div class="bg-transparent p-4 border-2 border-slate-300">
+           <div class="routes__nav-card h-72 bg-violet-200 hover:bg-violet-300 rounded-lg flex">
+            <div class="routes__container border m-3 rounded-md flex items-center">
+              <div class="">
+                <router-link 
+                href="${props.routes.todo}" 
+                label="ToDo" 
+                class="text-5xl text-lime-950 p-12">
+                </router-link>
+              </div>
             </div>
           </div>
         </div>
-        <div class="routes__nav-card h-72 bg-violet-200 hover:bg-violet-300 rounded-lg flex">
-          <div class="routes__container border m-3 rounded-md flex items-center">
-            <div class="">
-              <router-link 
-              href="${props.routes.todo}" 
-              label="ToDo" 
-              class="text-5xl text-lime-950 p-12">
-              </router-link>
+        <div class="bg-transparent p-4 border-2 border-slate-300">
+          <div class="routes__nav-card h-72 bg-violet-200 hover:bg-violet-300 rounded-lg flex">
+            <div class="routes__container border m-3 rounded-md flex items-center">
+              <div class="">
+                <router-link 
+                href="${props.routes.moodTracker}" 
+                label="Mood tracker" 
+                class="text-5xl text-lime-950 p-12">
+                </router-link>
+              </div>
             </div>
           </div>
         </div>
-        <div class="routes__nav-card h-72 bg-violet-200 hover:bg-violet-300 rounded-lg flex">
-          <div class="routes__container border m-3 rounded-md flex items-center">
-            <div class="">
-              <router-link 
-              href="${props.routes.moodTrackerRecords}" 
-              label="Your Records" 
-              class="text-5xl text-lime-950 p-12">
-              </router-link>
+        <div class="bg-transparent p-4 border-2 border-slate-300">
+          <div class="routes__nav-card h-72 bg-violet-200 hover:bg-violet-300 rounded-lg flex">
+            <div class="routes__container border m-3 rounded-md flex items-center">
+              <div class="">
+                <router-link 
+                href="${props.routes.moodTrackerRecords}" 
+                label="Your Records" 
+                class="text-5xl text-lime-950 p-12">
+                </router-link>
+              </div>
             </div>
           </div>
         </div>
