--- a/src/pages/sign-up/sign-up.template.hbs
+++ b/src/pages/sign-up/sign-up.template.hbs
@@ -18,7 +18,7 @@
           <ui-input type="text" name="displayName" label="Your Name"></ui-input>
           <ui-input type="email" name="email" label="Email"></ui-input>
           <ui-input type="password" name="password" label="Password"></ui-input>
-          <ui-input type="password" name="confirm-password" label="Confirm password"></ui-input>
+          <ui-input type="password" name="confirmPassword" label="Confirm password"></ui-input>
           <ui-button caption="Submit" class-name="block w-full hover:bg-stone-900 hover:text-slate-300"></ui-button>
         </form>
       </div>
