--- a/src/pages/user-home/user-home.template.hbs
+++ b/src/pages/user-home/user-home.template.hbs
@@ -3,7 +3,7 @@
     <header class="flex h-24 border-2 items-center justify-between py-5 px-24 bg-violet-100">
       <div class="user flex gap-3 items-center">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2c/Default_pfp.svg/2048px-Default_pfp.svg.png" alt="user"
-          class="user__img rounded-full w-14 h-14"/>
+          class="user__img rounded-full border border-stone-800 w-14 h-14"/>
         <p class="text-xl">{{user.displayName}}</p>
       </div>
       <ui-button
