--- a/src/components/toast/toast.template.hbs
+++ b/src/components/toast/toast.template.hbs
@@ -1,7 +1,7 @@
 {{#if isShow}}
 <div
   class="{{type}}
-      fixed border-t-4 flex items-center w-full max-w-xs p-4 space-x-4 text-gray-500 bg-white divide-x rounded-lg shadow bottom-5 right-5 animate-fade-up animate-duration-500">
-  <div class="text-sm font-normal">{{message}}</div>
+      fixed border-t-4 border border-stone-900 flex items-center w-full max-w-xs p-4 space-x-4 text-gray-500 bg-white divide-x rounded-lg shadow bottom-5 right-5 animate-fade-up animate-duration-500">
+  <div class="text-lg font-normal">{{message}}</div>
 </div>
 {{/if}}
