fixed mistakes / deployed

--- a/src/pages/user-home/user-home.template.hbs
+++ b/src/pages/user-home/user-home.template.hbs
@@ -46,7 +46,7 @@
               <div class="">
                 <router-link 
                 href="${props.routes.moodTrackerRecords}" 
-                label="Your Records" 
+                label="Mood Records" 
                 class="text-5xl text-lime-950 p-12">
                 </router-link>
               </div>
