--- a/src/app.template.hbs
+++ b/src/app.template.hbs
@@ -5,7 +5,7 @@
     <app-route path="${props.routes.signIn}" title="Sign In" component="sign-in-page"></app-route>
     <app-route path="${props.routes.signUp}" title="Sign Up" component="sign-up-page"></app-route>
     <app-route path="${props.routes.notFound}" title="404 | Not Found" component="not-found"></app-route>
-    <app-route path="${props.routes.userHome}" title="Lobby" component="user-home-page"></app-route>
+    <app-route path="${props.routes.userHome}" title="Your Page" component="user-home-page"></app-route>
     <app-route path="${props.routes.todo}" title="ToDo" component="todo-page"></app-route>
     <app-route path="${props.routes.moodTracker}" title="Mood Tracker" component="mood-tracker-page"></app-route>
     <app-route path="${props.routes.moodTrackerRecords}" title="Your Records" component="mood-tracker-records-page"></app-route>
