--- a/src/components/mood-record-card/mood-record-card.template.hbs
+++ b/src/components/mood-record-card/mood-record-card.template.hbs
@@ -11,7 +11,7 @@
 
   <div class="absolute right-4 top-3 flex flex-col gap-3 justify-end">
     <p class="text-lg">{{createdAt}}</p>
-    <button class="delete-btn text-3xl text-stone-900">
+    <button name="deleteBtn" class="delete-btn text-3xl text-stone-900">
       <i class="icon-badge-x"></i>
     </button>
   </div>
