--- a/src/components/task-card/task-card.template.hbs
+++ b/src/components/task-card/task-card.template.hbs
@@ -5,15 +5,18 @@
 
   <div class="flex items-center justify-between mt-2">
     <div class="flex gap-3">
-      <input 
-      type="checkbox"
-      class="checkbox h-6 w-6"
-      {{#if isCompleted}}
-      checked
-      {{/if}}>
-      <h3 class="line-clamp-1 text-lg font-medium">{{title}}</h3>
+      <label for="checkBox">
+        <input 
+        name="checkBox"
+        type="checkbox"
+        class="checkbox h-6 w-6"
+        {{#if isCompleted}}
+        checked
+        {{/if}}>
+        <h3 class="line-clamp-1 text-lg font-medium">{{title}}</h3>
+      </label>
     </div>
-    <button class="delete-task-btn text-center text-slate-600 w-10 h-10 text-2xl"><i
+    <button name="deleteBtn" class="delete-task-btn text-center text-slate-600 w-10 h-10 text-2xl"><i
         class="delete-task-btn icon-badge-x"></i></button>
   </div>
 
