--- a/src/components/task-card/task-card.template.hbs
+++ b/src/components/task-card/task-card.template.hbs
@@ -4,8 +4,7 @@
   </div>
 
   <div class="flex items-center justify-between mt-2">
-    <div class="flex gap-3">
-      <label for="checkBox">
+    <label class="flex gap-3" for="checkbox">
         <input 
         name="checkBox"
         type="checkbox"
@@ -14,9 +13,8 @@
         checked
         {{/if}}>
         <h3 class="line-clamp-1 text-lg font-medium">{{title}}</h3>
-      </label>
-    </div>
-    <button name="deleteBtn" class="delete-task-btn text-center text-slate-600 w-10 h-10 text-2xl"><i
+    </label>
+    <button aria-label="deleteBtn" class="delete-task-btn text-center text-slate-600 w-10 h-10 text-2xl"><i
         class="delete-task-btn icon-badge-x"></i></button>
   </div>
 
